--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                 <div class="col-md-6">
 
                     <div class="feature-image">
-                        <img src="img/sample1.png" alt="Feature Image" class="img-responsive wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.6s" />
+                        <img src="img/bizgrow.png" alt="Feature Image" class="img-responsive wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.6s" />
                     </div>                  
                     
                 </div> <!-- /.col -->
