--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
                 <!-- Portfolio Item -->
                 <div class="pf-item branding contact-form-item wow zoomIn">
-                    <a href="img/portfolio/1.jpg" class="pf-style lightbox-image mfp-image">
+                    <a href="img/portfolio/IndianMangoesLogo.png" class="pf-style lightbox-image mfp-image">
                         <div class="pf-image">
                             <img src="img/portfolio/1.jpg" alt="">
                             <div class="overlay">
@@ -471,7 +471,7 @@
 
                 <!-- Portfolio Item -->
                 <div class="pf-item graphic webdesign contact-form-item wow zoomIn">
-                    <a href="img/portfolio/2.jpg" class="pf-style lightbox-image mfp-image">
+                    <a href="img/portfolio/TFClogo.png" class="pf-style lightbox-image mfp-image">
                         <div class="pf-image">
                             <img src="img/portfolio/2.jpg" alt="">
                             <div class="overlay">
@@ -492,7 +492,7 @@
                 <div class="pf-item video webdesign contact-form-item wow zoomIn">
                     <a href="https://www.youtube.com/watch?v=6D-A6CL3Pv8" class="pf-style lightbox-video mfp-iframe">
                         <div class="pf-image">
-                            <img src="img/portfolio/3.jpg" alt="">
+                            <img src="img/portfolio/Swaplelogo.png" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
