--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <div class="pf-item branding contact-form-item wow zoomIn">
                     <a href="img/portfolio/IndianMangoesLogo.png" class="pf-style lightbox-image mfp-image">
                         <div class="pf-image">
-                            <img src="img/portfolio/1.jpg" alt="">
+                            <img src="img/portfolio/IndianMangoesLogo.png" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
@@ -473,7 +473,7 @@
                 <div class="pf-item graphic webdesign contact-form-item wow zoomIn">
                     <a href="img/portfolio/TFClogo.png" class="pf-style lightbox-image mfp-image">
                         <div class="pf-image">
-                            <img src="img/portfolio/2.jpg" alt="">
+                            <img src="img/portfolio/TFClogo.png" alt="">
                             <div class="overlay">
                                 <div class="overlay-caption">
                                     <div class="overlay-content">
