--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a data-scroll href="#home">Home</a></li>
                                     <li><a href="#">Service</a></li>
-                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="portfolio.html">Portfolio</a></li>
                                     <li><a href="#">Team</a></li>
                                     <li><a href="#">Testimonials</a></li>
                                     <li><a href="#">blog</a></li>                       
