--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     <meta name="description" content="N.Agency - Responisve Landing Page for Agency">
     <meta name="keywords" content="">
     <meta name="author" content="tabthemes">
-    
+    <meta name="robots" content="noindex, nofollow">
+
     <!-- Favicons -->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png">
@@ -107,7 +108,7 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="#">Service</a></li>
-                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="portfolio.html">Portfolio</a></li>
                                     <li><a href="#">Team</a></li>
                                     <li><a href="#">Testimonials</a></li>
                                     <li><a href="#">blog</a></li>                       
